# steams_pkg

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: readme.md
examples/01-attention-based data fusion for spatial prediction using several sources of mobile sensors/: readme.md
examples/01-attention-based data fusion for spatial prediction using several sources of mobile sensors/results/: 1a-ensemble.csv  1a-krig_model.pth  1b-ensemble.csv  1b-nwd_model.pth  1c-ensemble.csv  1c-krignn2_model.pth  1d-dpnn3_model.pth  1d-dpnn4_model.pth  1d-ensemble.csv  1d-nwdnn2_model.pth  2a-ensemble.csv  2b-ensemble.csv  2c-ensemble.csv  2c-krignn2_model.pth  2d-ensemble.csv  2d-nwdnn2_model.pth  3a-ensemble.csv  3b-ensemble.csv  (+4 more)
steams/: data.py  k_fold_eval.py  k_fold_train.py  prediction.py  trainer.py
steams.egg-info/: PKG-INFO  requires.txt
steams/classes/: class_model.py  class_xyv_none.py  class_xyv_x.py
steams/data/: KVyQVx.py  KVydecQVxencVx.py  class_xyv_none.py  class_xyv_x.py  irKVyQVx.py
steams/dict/: ext.py  int.py
steams/dictionnary/: dictionnary_metrics.py  dictionnary_model.py  dictionnary_scaling.py  dictionnary_trevpr.py  dictionnary_xyv.py
steams/krig/: krig.py
steams/models/: attention.py  krig.py  mads.py  madsormer.py  mha.py  nwmer.py  nwormer.py  train_eval_pred.py  transformer.py  transformer_decoder.py  transformer_encoder.py
steams/tepe/: steams.py  tepe.py
steams/train_eval_pred/: k_fold.py  prediction.py  train_eval.py  trevpr.py
steams/utils/: criterion.py  model.py  scale.py  scheduler.py  utils.py
(+76 files in other folders)
