[project]
name = "steams"
version = "0.19"
authors = [
  { name="Jean-Marie Lepioufle", email="jm@jeanmarie.eu" },
]
description = "Space-time prediction with sparse and irregular space-time multi-timeserie."
readme = "README.md"
requires-python = ">=3.8"
license = {text='MIT + Copyright Jean-Marie Lepioufle'}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
  "pandas~=2.2.2",
  "torch~=1.11",
  "numpy~=1.23.5"
]

[project.urls]
"Homepage" = "https://github.com/j-m-l-e-u/steams_pkg"
